--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
                     <div class="d-flex align-items-center justify-content-between mb-3">
                         <a href="index.html" class="">
-                            <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>ASO</h3>
+                            <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>LWC</h3>
                         </a>
                         <h3>Sign In</h3>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Name">
+                        <label for="floatingInput">Name</label>
                     </div>
                     <div class="form-floating mb-4">
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -68,8 +68,7 @@
                         </div>
                         <a href="">Forgot Password</a>
                     </div>
-                    <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
-                    <p class="text-center mb-0">Don't have an Account? <a href="">Sign Up</a></p>
+                    <button id="signInBtn" onclick="login()" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
                 </div>
             </div>
         </div>
