--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         </div>
                         <a href="">Forgot Password</a>
                     </div>
+                    <p id="error-text" class="text-center"></p>
                     <button id="signInBtn" onclick="login()" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
                 </div>
             </div>
