Add last 10 logins to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -206,60 +206,72 @@
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
                             <thead>
                                 <tr class="text-white">
-                                    <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Invoice</th>
-                                    <th scope="col">Customer</th>
-                                    <th scope="col">Amount</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Action</th>
+                                    <th scope="col">User</th>
+                                    <th scope="col">From</th>
+                                    <th scope="col">IP</th>
+                                    <th scope="col">Other</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td id="0-user"></td>
+                                    <td id="0-from"></td>
+                                    <td id="0-ip"></td>
+                                    <td id="0-time"></td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td id="1-user"></td>
+                                    <td id="1-from"></td>
+                                    <td id="1-ip"></td>
+                                    <td id="1-time"></td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td id="2-user"></td>
+                                    <td id="2-from"></td>
+                                    <td id="2-ip"></td>
+                                    <td id="2-time"></td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td id="3-user"></td>
+                                    <td id="3-from"></td>
+                                    <td id="3-ip"></td>
+                                    <td id="3-time"></td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td id="4-user"></td>
+                                    <td id="4-from"></td>
+                                    <td id="4-ip"></td>
+                                    <td id="4-time"></td>
+                                </tr>
+                                <tr>
+                                    <td id="5-user"></td>
+                                    <td id="5-from"></td>
+                                    <td id="5-ip"></td>
+                                    <td id="5-time"></td>
+                                </tr>
+                                <tr>
+                                    <td id="6-user"></td>
+                                    <td id="6-from"></td>
+                                    <td id="6-ip"></td>
+                                    <td id="6-time"></td>
+                                </tr>
+                                <tr>
+                                    <td id="7-user"></td>
+                                    <td id="7-from"></td>
+                                    <td id="7-ip"></td>
+                                    <td id="7-time"></td>
+                                </tr>
+                                <tr>
+                                    <td id="8-user"></td>
+                                    <td id="8-from"></td>
+                                    <td id="8-ip"></td>
+                                    <td id="8-time"></td>
+                                </tr>
+                                <tr>
+                                    <td id="9-user"></td>
+                                    <td id="9-from"></td>
+                                    <td id="9-ip"></td>
+                                    <td id="9-time"></td>
                                 </tr>
                             </tbody>
                         </table>
