--- a/processes.html
+++ b/processes.html
@@ -132,7 +132,7 @@
                 <div class="bg-secondary text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <h6 class="mb-0">Currently Running Processes</h6>
-                        <a href="javascript:void(0);" onclick="showProcesses()">Refresh</a>
+                        <a href="/processes.html">Refresh</a>
                     </div>
                     <div class="table-responsive">
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
@@ -156,7 +156,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Recent Sales End -->
 
 
             <!-- Footer Start -->
