--- a/music.html
+++ b/music.html
@@ -111,9 +111,9 @@
                 </div>
             </nav>
             <!-- Navbar End -->
-            <div id="modal" class="modal" style="background-color: black !important" tabindex="-1" role="dialog">
+            <div id="modal" class="modal" style="background-color: rgba(0, 0, 0, 0.6)" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
+                    <div class="modal-content" style="background-color: #181C24">
                         <div class="modal-header">
                             <h5 class="modal-title" id="modal-title"></h5>
                         </div>
