Add some more HTML

--- a/cron.html
+++ b/cron.html
@@ -149,22 +149,22 @@
                             </thead>
                             <tbody id="process-holder">
                                 <tr>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2">
                                         <input id="minute" type="text" class="form-control" placeholder="Minute" aria-label="Minute" aria-describedby="basic-addon2">
                                         </div></td>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2 mt-2">
                                         <input id="hour" type="text" class="form-control" placeholder="Hour" aria-label="Hour" aria-describedby="basic-addon2">
                                     </div></td>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2 mt-2">
                                         <input id="dom" type="text" class="form-control" placeholder="Day of the Month" aria-label="Day of the Month" aria-describedby="basic-addon2">
                                     </div></td>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2 mt-2">
                                         <input id="month" type="text" class="form-control" placeholder="Month" aria-label="Month" aria-describedby="basic-addon2">
                                     </div></td>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2 mt-2">
                                         <input id="dow" type="text" class="form-control" placeholder="Day of the Week" aria-label="Day of the Week" aria-describedby="basic-addon2">
                                     </div></td>
-                                    <td><div class="input-group mb-3">
+                                    <td><div class="input-group mb-2 mt-2">
                                         <input id="script" type="text" class="form-control" placeholder="Script" aria-label="Script" aria-describedby="basic-addon2">
                                     </div></td>
                                     <td>
