Add USB automount & music

--- a/music.html
+++ b/music.html
@@ -131,14 +131,15 @@
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-secondary text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">Music Files in /media/usb1</h6>
-                        <a href="/manage-users.html">Refresh</a>
+                        <h6 class="mb-0">Music Files in /mnt/usb</h6>
+                        <a href="/music.html">Refresh</a>
                     </div>
                     <div class="table-responsive">
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
                             <thead>
                             <tr class="text-white">
                                 <th scope="col">Song</th>
+                                <th scope="col">Path</th>
                                 <th scope="col">Action</th>
                             </tr>
                             </thead>
@@ -187,6 +188,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script>showMusic()</script>
 </body>
 
 </html>
